# morphosx

./: .dockerignore  .editorconfig  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  TRIGGER  lefthook.yml  pyproject.toml
.github/workflows/: bump.yml  docker-publish.yml  publish.yml  pypi-publish.yml  release.yml
docs/: configuration.md  introduction.md  processing.md  security.md  upload.md
morphosx/app/: cli.py  main.py  settings.py
morphosx/app/api/: assets.py
morphosx/app/core/: auth.py  exceptions.py  logging.py  security.py
morphosx/app/engine/: archive.py  audio.py  base.py  bim.py  document.py  font.py  model3d.py  office.py  processor.py  raw.py  text.py  types.py  video.py  vips.py
morphosx/app/storage/: base.py  local.py  models.py  s3.py
tests/: conftest.py  test_bim.py  test_modern_images.py  test_office.py  test_processor.py  test_raw.py  test_s3.py  test_text.py  test_vips.py
tests/assets/: sample.docx  sample.json  sample.md  sample.txt
