[project]
name = "morphosx"
version = "0.5.3"
description = "high-performance media processing engine for on-the-fly image transformations and storage."
authors = [
    {name = "Davide Di Criscito"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<3.15"
keywords = ["media", "image-processing", "cdn", "fastapi", "bim", "ifc", "3d", "on-the-fly"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
    "fastapi (>=0.132.0,<0.133.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "aioboto3 (>=15.5.0,<16.0.0)",
    "pygments (>=2.19.2,<3.0.0)",
    "markdown (>=3.10.2,<4.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "trimesh (>=4.11.2,<5.0.0)"
]

[project.optional-dependencies]
video = ["ffmpeg-python (>=0.2.0,<0.3.0)"]
pdf = ["pymupdf (>=1.27.1,<2.0.0)"]
raw = ["rawpy (>=0.26.1,<0.27.0)", "imageio (>=2.37.2,<3.0.0)", "numpy (<2.0.0)"]
office = ["python-docx (>=1.2.0,<2.0.0)", "python-pptx (>=1.0.2,<2.0.0)", "openpyxl (>=3.1.5,<4.0.0)"]
3d = ["trimesh (>=4.11.2,<5.0.0)", "pygltflib (>=1.16.5,<2.0.0)"]
bim = ["ifcopenshell (>=0.8.4.post1,<0.9.0)"]
modern = ["pillow-heif (>=1.2.1,<2.0.0)", "pillow-avif-plugin (>=1.5.5,<2.0.0)"]
vips = ["pyvips (>=3.1.1,<4.0.0)"]
full = [
    "ffmpeg-python", "pymupdf", "rawpy", "imageio", "numpy",
    "python-docx", "python-pptx", "openpyxl", "trimesh", 
    "pygltflib", "ifcopenshell", "pillow-heif", "pillow-avif-plugin", "pyvips"
]

[project.scripts]
morphosx = "morphosx.app.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.1.0,<27.0.0)",
    "isort (>=8.0.0,<9.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "moto (>=5.1.21,<6.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "commitizen (>=4.13.8,<5.0.0)",
    "poethepoet (>=0.42.0,<0.43.0)"
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.5.3"
version_files = [
    "pyproject.toml:version"
]
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = true

[tool.poe.tasks]
release = "cz bump --changelog"
commit = "cz commit"
check = "pytest tests/"
clean = "rm -rf storage/cache/*"
start = "uvicorn morphosx.app.main:app --reload --host 0.0.0.0 --port 6100"
test = "pytest tests/test_processor.py -s"